Solves Bug #74 : added word-wrap property to solve the issue

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ body.dark-mode .list-group-item {
   text-align: left;
   margin-right: 20px;
   border-radius: 5rem !important;
+  word-wrap: break-word;
 }
 
 .list-group-item button {
